--- a/Velov10/LocationIcon10m.xaml
+++ b/Velov10/LocationIcon10m.xaml
@@ -1,8 +1,7 @@
 ﻿<UserControl
-    x:Class="Velov.LocationIcon10m"
+    x:Class="Velov10.LocationIcon10M"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Velov"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
